syntax = "proto3";

package consume;

service Consume{
    rpc Pay(ConsumeReq) returns (ConsumeResp) {}
}

message ConsumeReq{
    int64 item_id = 1;
    string description = 2;
    int64 item_num = 3;
    int32 user_id = 4;
}

message ConsumeResp{
    int64 order_id = 2;
}